# facet-xdr

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs
tests/: mod.rs
